博客重建添加内容

--- a/source/_posts/博客重构.md
+++ b/source/_posts/博客重构.md
@@ -74,6 +74,34 @@ categories: hexo博客
    hexo server
    ```
 
+5. github pages部署
+
+   首先尝试按照官方文档提供方法在github pages上部署。
+
+   github仓库已经创建完成，先是在travis CI上绑定GitHub；然后在application setting处设置权限；之后生成一个只含有repo权限的Token并复制；回到 Travis CI，前往你的 repository 的设置页面，在 **Environment Variables** 下新建一个环境变量，**Name** 为 `GH_TOKEN`，**Value** 为刚才你在 GitHub 生成的 Token。确保 **DISPLAY VALUE IN BUILD LOG** 保持 **不被勾选** 避免你的 Token 泄漏，点击 **Add** 保存；创建.yml文件并上传到远程仓库。配置如下。
+
+   ```yaml
+   sudo: false
+   language: node_js
+   node_js:
+     - 10 # use nodejs v10 LTS
+   cache: npm
+   branches:
+     only:
+       - master # build master branch only
+   script:
+     - hexo generate # generate static files
+   deploy:
+     provider: pages
+     skip-cleanup: true
+     github-token: $GH_TOKEN
+     keep-history: true
+     on:
+       branch: master
+     local-dir: public
+   ```
+
+   
 
 ## 四.遇到的问题
 
