博客重建 添加内容-2

--- a/source/_posts/博客重构.md
+++ b/source/_posts/博客重构.md
@@ -78,11 +78,29 @@ categories: hexo博客
 
    首先尝试按照官方文档提供方法在github pages上部署。
 
-   github仓库已经创建完成，先是在travis CI上绑定GitHub；然后在application setting处设置权限；之后生成一个只含有repo权限的Token并复制；回到 Travis CI，前往你的 repository 的设置页面，在 **Environment Variables** 下新建一个环境变量，**Name** 为 `GH_TOKEN`，**Value** 为刚才你在 GitHub 生成的 Token。确保 **DISPLAY VALUE IN BUILD LOG** 保持 **不被勾选** 避免你的 Token 泄漏，点击 **Add** 保存；创建.yml文件并上传到远程仓库。配置如下。
+   
 
+   github仓库已经创建完成，先是在travis CI上绑定GitHub；
+   
+   
+   
+   然后在application setting处设置权限；之后生成一个只含有repo权限的Token并复制；
+   
+   
+   
+   回到 Travis CI，前往你的 repository 的设置页面，在 **Environment Variables** 下新建一个环境变量，**Name** 为 `GH_TOKEN`，**Value** 为刚才你在 GitHub 生成的 Token。确保 **DISPLAY VALUE IN BUILD LOG** 保持 **不被勾选** 避免你的 Token 泄漏，点击 **Add** 保存；创建.yml文件并上传到远程仓库配置如下，接着travis CI会自动build并创建一个新的分支gh-pages,此过程遇到一点小错误，具体见四-3，4；
+   
+   
+   
+   此后在github仓库上的设置里将github pages里的source选为gh-pages；
+   
+   
+   
+   理论上说到此为止就应该ok了，但是不知道为什么我进入我的网址[robostar](robostar.github.io),却被404了，后来发现github pages给我生成的网址是[robostar](https://robostar-ye.github.io/robostar.github.io),好了，确认是我的仓库名设置错误，正确格式为：用户名/github.io
+   
    ```yaml
    sudo: false
-   language: node_js
+language: node_js
    node_js:
      - 10 # use nodejs v10 LTS
    cache: npm
@@ -100,10 +118,23 @@ categories: hexo博客
        branch: master
      local-dir: public
    ```
-
+   
    
 
 ## 四.遇到的问题
 
 1. 在使用YAML表进行文章或者站点配置的时候，参数值应该与参数变量名后的冒号保持间隔，否则会失效
+
 2. 在_config.yml中配置了categories，tags
+
+3. 创建.travis.yml后忘记向里面添加内容了，于是build失败；
+
+4. 续3，添加内容后，开始build，但是出现如下错误，猜想是不是之前设置的Token有问题，打算重新设置一下试试，ok！build成功。
+
+   ```bash
+   1.29s$ rvm $(travis_internal_ruby) --fuzzy do ruby -S gem install dpl
+   invalid option "--token="
+   failed to deploy
+   ```
+
+   
