博客重建 添加内容-3,并尝试推送到阿里云服务器

--- a/source/_posts/博客重构.md
+++ b/source/_posts/博客重构.md
@@ -90,17 +90,9 @@ categories: hexo博客
    
    回到 Travis CI，前往你的 repository 的设置页面，在 **Environment Variables** 下新建一个环境变量，**Name** 为 `GH_TOKEN`，**Value** 为刚才你在 GitHub 生成的 Token。确保 **DISPLAY VALUE IN BUILD LOG** 保持 **不被勾选** 避免你的 Token 泄漏，点击 **Add** 保存；创建.yml文件并上传到远程仓库配置如下，接着travis CI会自动build并创建一个新的分支gh-pages,此过程遇到一点小错误，具体见四-3，4；
    
-   
-   
-   此后在github仓库上的设置里将github pages里的source选为gh-pages；
-   
-   
-   
-   理论上说到此为止就应该ok了，但是不知道为什么我进入我的网址[robostar](robostar.github.io),却被404了，后来发现github pages给我生成的网址是[robostar](https://robostar-ye.github.io/robostar.github.io),好了，确认是我的仓库名设置错误，正确格式为：用户名/github.io
-   
    ```yaml
    sudo: false
-language: node_js
+   language: node_js
    node_js:
      - 10 # use nodejs v10 LTS
    cache: npm
@@ -108,7 +100,7 @@ language: node_js
      only:
        - master # build master branch only
    script:
-     - hexo generate # generate static files
+  - hexo generate # generate static files
    deploy:
      provider: pages
      skip-cleanup: true
@@ -119,6 +111,59 @@ language: node_js
      local-dir: public
    ```
    
+   
+   
+   此后在github仓库上的设置里将github pages里的source选为gh-pages；
+   
+   
+   
+   理论上说到此为止就应该ok了，但是不知道为什么我进入我的网址[robostar](robostar.github.io),却被404了，后来发现github pages给我生成的网址是[robostar](https://robostar-ye.github.io/robostar.github.io),好了，确认是我的仓库名设置错误，正确格式为：用户名/github.io
+   
+6. 阿里云服务器部署
+
+   今天早上通过阿里云的阿里云高校计划白嫖了两个月的ECS服务器，而且部署在阿里云的服务器上访问速度应该会快一点
+
+   首先创建git服务器
+
+   ```bash
+   addusr git_blog # 添加一个服务器用户
+   su git_blog # 切换用户
+   cd ~
+   mkdir blog
+   git init --bare blog/hexo_blog.git # 创建仓库
+   
+   #此时如果直接在本地访问服务器上的git仓库会出现如下问题：
+   robos@DESKTOP-1SO23EF MINGW64 /d/Documents/my_projects
+   $ git clone git@你服务器的公网ip:/home/git_blog/git_blog/git
+   Cloning into 'git'...
+   The authenticity of host '**********' can't be established.
+   ECDSA key fingerprint is SHA256:oAEoOwC61TeNvcdxJK5i1fuIHUhflUkuqk8tfTd+/gk.
+   Are you sure you want to continue connecting (yes/no/[fingerprint])?
+   Host key verification failed.
+   fatal: Could not read from remote repository.
+   
+   Please make sure you have the correct access rights
+   and the repository exists.
+   
+   #在服务器上创建添加本地机的公钥
+   mkdir .shh
+   cd .ssh
+   touch authorized_keys
+   vi authorized_keys
+   #######添加公钥结束#######
+   
+   
+   $ git clone git_blog@120.79.43.6:/home/git_blog/blog/hexo_blog
+   Cloning into 'hexo_blog'...
+   warning: You appear to have cloned an empty repository.
+   
+   #ok git 服务器搭建完成
+   #下一步在我的本地仓库里额外添加一个远程仓库，直接在本地仓库里.git/congig文件中remote “origin”添加一个url：
+   	[remote "origin"]
+   	######
+   	url = git_blog@ip地址:/home/git_blog/blog/hexo_blog
+   ```
+
    
 
 ## 四.遇到的问题
@@ -137,4 +182,4 @@ language: node_js
    failed to deploy
    ```
 
-   
+5. 不知为什么，在服务器里/etc/passwd中将git_blog设为/bin/git-shell后无法克隆仓库。
