博客重建 添加内容-4

--- a/source/_posts/博客重构.md
+++ b/source/_posts/博客重构.md
@@ -164,6 +164,13 @@ categories: hexo博客
    	url = git_blog@ip地址:/home/git_blog/blog/hexo_blog
    ```
 
+   配置安装nginx及git hooks
+
+   ```bash
+   apt install nginx
+   
+   ```
+
    
 
 ## 四.遇到的问题
