--- a/source/_posts/博客重构.md
+++ b/source/_posts/博客重构.md
@@ -164,7 +164,7 @@ categories: hexo博客
    	url = git_blog@ip地址:/home/git_blog/blog/hexo_blog
    ```
 
-   配置安装nginx及git hooks：test
+   配置安装nginx及git hooks：
 
    ```bash
    apt install nginx
