搭建完成，博客重构.md基本编写完成

--- a/source/_posts/博客重构.md
+++ b/source/_posts/博客重构.md
@@ -169,9 +169,59 @@ categories: hexo博客
    ```bash
    apt install nginx
    
+   #安装nodejs
+    curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash
+    sudo apt-get install -y nodejs
+    npm config set registry http://registry.npm.taobao.org
+    npm install hexo-cli -g
+   
+   #新建一个文件夹用于build site，取名hexo；
+    cd /home/git_blog/blog/
+    mkdir hexo
+    cd /home/git_blog/blog/hexo_blog.git#进入服务器的git仓库
+    cd hooks
+    vi post-update 
    ```
 
+   进入post-update后编写脚本如下：
+
+   ```bash
+   #bin/bash
+     
+   git --work-tree=/home/git_blog/blog/hexo  --git-dir=/home/git_blog/blog/hexo_blog.git  checkout  -f
    
+   # 此处应注意将hexo的权限赋予git_blog
+   cd /home/git_blog/blog/hexo
+   hexo clean
+   hexo g
+   ```
+
+   然后去服务器控制台开启80端口；
+
+   最后去修改/etc/nginx/site_available/default文件：
+
+   ```
+    #修改前
+    root /var/www/html;
+    # Add index.php to the list if you are using PHP
+    index index.html, index.html, *****;
+           
+    #修改后
+    root /home/git_blog/blog/hexo/public;
+    # Add index.php to the list if you are using PHP
+    index index.html;
+   ```
+
+   ```bash
+   nginx -c /etc/nginx/nginx.conf
+   nginx -s reload
+   ```
+
+   直接在浏览器中输入服务器的公网ip，enjoy it！
+
+7. 绑定域名
+
+   我之前搭建的博客直接买了好久的域名，还没过期，就直接绑上就OK了。
 
 ## 四.遇到的问题
 
@@ -190,3 +240,7 @@ categories: hexo博客
    ```
 
 5. 不知为什么，在服务器里/etc/passwd中将git_blog设为/bin/git-shell后无法克隆仓库。
+
+6. nginx配置文件语句后忘记加“；”导致无法运行通过
+
+7. nginx -s reload 前先指定一个特定的nginx配置文件nginx -c /etc/nginx/nginx.conf
