更新文章description 及 tags

--- a/source/_posts/1.4.3 读取数量不定的输入数据.md
+++ b/source/_posts/1.4.3 读取数量不定的输入数据.md
@@ -4,7 +4,12 @@ categories:
 - C++ Primer
 - chapter-1 开始
 date: 2021-01-18 23:33:27
-tags: C++
+tags: 
+- C++
+- 输入流
+- istream
+- 判断条件
+description: 记录输入流运算表达式作为判断条件时的情况
 ---
 
 
