--- a/source/_posts/博客重构.md
+++ b/source/_posts/博客重构.md
@@ -1,8 +1,15 @@
 ---
 title: 博客重构
 date: 2021-01-16 10:22:14
-tags: hexo
-categories: hexo博客
+tags: 
+- hexo
+- nginx
+- git
+- hook
+- 阿里云ECS
+categories: 
+- hexo博客
+description: 重新构建我的博客的流程，留下作为参考
 ---
 
 ## 一. 前因
@@ -100,8 +107,9 @@ categories: hexo博客
      only:
        - master # build master branch only
    script:
+   ```
   - hexo generate # generate static files
-   deploy:
+      deploy:
      provider: pages
      skip-cleanup: true
      github-token: $GH_TOKEN
