修改图片不能正常显示的问题

--- a/source/_posts/关于直接调用构造函数的一些疑惑.md
+++ b/source/_posts/关于直接调用构造函数的一些疑惑.md
@@ -31,7 +31,7 @@ tags:
 
 ​		这段代码再MSVC环境下可顺利编译通过并且可以同重载后的流运算符''<<"std::cout出来;但是在MGingw64和Ubuntu下就无法编译通过，静态检测也会报错，静态检测报错如下：
 
-![](D:\Documents\my_projects\my_blog\source\_posts\一些疑惑\001.png)
+![](一些疑惑/001.png)
 
 编译时报错如下：
 
